--- a/index.html
+++ b/index.html
@@ -5,9 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio de desenvolvedor front-end." />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header-bg">
+      <div class="header">
+        <a href="./"><img src="./IMG/Logo MATOS.svg" alt="Logo do desenvolvedor" /></a>
+        <nav aria-label="primaria">
+          <ul class="header-menu">
+            <li>
+              <a
+                href="//www.linkedin.com/in/jo%C3%A3o-pedro-matos-b47a37268/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./IMG/Redes sociais/LinkedIn.svg"
+                  class="media-object img-responsive img-thumbnail"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="//github.com/matos5711"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./IMG/Redes sociais/Github.svg"
+                  class="media-object img-responsive img-thumbnail"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="//www.instagram.com/j_matosb/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./IMG/Redes sociais/Instagram.svg"
+                  class="media-object img-responsive img-thumbnail"
+              /></a>
+            </li>
+            <li>
+              <img class="menu" src="/IMG/Redes sociais/Menu.svg" alt="Menu">
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
