--- a/index.html
+++ b/index.html
@@ -51,5 +51,18 @@
         </nav>
       </div>
     </header>
+    <main class="introducao-bg">
+      <div class="introducao">
+        <img src="/IMG/fOTO.svg" alt="Foto do rosto do desenvolvedor">
+<h1>
+  Olá, me chamo Matos.
+</h1>
+<p>Localizado no Brasil, Cuiabá-MT, sou desenvolvedor front-end, com foco em desenvolvimento de sites responsivos e com uma estética que represente você  e a sua marca.</p>
+<img src="/IMG/VETOR.svg" alt="Desenho vetorial">
+<h2>Designer</h2>
+<p>Desenvolvo sites com fundamentos do UX/UI Designer  e da ilustração de vetores, para assim conseguir dar personalidade  e funcionalidade ao seu site.</p>
+<h2>Tecnologias  e Ferramentas</h2>
+      </div>
+    </main>
   </body>
 </html>
