Mensagem de commit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="description" content="Portfolio de desenvolvedor front-end." />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Tools.css" />
   </head>
   <body>
     <header class="header-bg">
       <div class="header">
-        <a href="./"><img src="./IMG/Logo MATOS.svg" alt="Logo do desenvolvedor" /></a>
+        <a class="logo" href="./"
+          ><img src="./IMG/Logo MATOS.svg" alt="Logo do desenvolvedor"
+        /></a>
         <nav aria-label="primaria">
           <ul class="header-menu">
             <li>
@@ -44,8 +47,7 @@
               /></a>
             </li>
             <li>
-              <img class="menu" src="/IMG/Redes sociais/Menu.svg" alt="Menu">
-              /></a>
+              <img class="menu" src="/IMG/Redes sociais/Menu.svg" alt="Menu" />
             </li>
           </ul>
         </nav>
@@ -53,16 +55,83 @@
     </header>
     <main class="introducao-bg">
       <div class="introducao">
-        <img src="/IMG/fOTO.svg" alt="Foto do rosto do desenvolvedor">
-<h1>
-  Olá, me chamo Matos.
-</h1>
-<p>Localizado no Brasil, Cuiabá-MT, sou desenvolvedor front-end, com foco em desenvolvimento de sites responsivos e com uma estética que represente você  e a sua marca.</p>
-<img src="/IMG/VETOR.svg" alt="Desenho vetorial">
-<h2>Designer</h2>
-<p>Desenvolvo sites com fundamentos do UX/UI Designer  e da ilustração de vetores, para assim conseguir dar personalidade  e funcionalidade ao seu site.</p>
-<h2>Tecnologias  e Ferramentas</h2>
-      </div>
+        <img src="./IMG/fOTO.svg" alt="Foto do rosto do desenvolvedor" />
+        <h1>Olá, me chamo Matos.</h1>
+        <p>
+          Localizado no Brasil, Cuiabá-MT, sou desenvolvedor front-end, com foco
+          em desenvolvimento de sites responsivos e com uma estética que
+          represente você e a sua marca.
+        </p>
+        <img src="/IMG/VETOR.svg" alt="Desenho vetorial" />
+
+        <div class="habilidades">
+          <h2 class="Designer">Designer</h2>
+          <p>
+            Desenvolvo sites com fundamentos do UX/UI Designer e da ilustração
+            de vetores, para assim conseguir dar personalidade e funcionalidade
+            ao seu site.
+          </p>
+          <h2>Tecnologias e Ferramentas</h2>
+          <div class="body-container">
+            <div class="container">
+              <div class="quadrado">
+                <i> <img src="/IMG/Tecnologias/icons8-figma(1).svg" alt="Figma" /></i>
+                <span>Figma</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img
+                    src="/IMG/Tecnologias/icons8-visual-studio-code-2019.svg"
+                    alt="VS Code icone"
+                /></i>
+                <span>Wordpress</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img
+                    src="/IMG/Tecnologias/icons8-typescript.svg"
+                    alt="TypeScript icone"
+                /></i>
+                <span>TypeScript</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img
+                    src="/IMG/Tecnologias/icons8-bootstrap.svg"
+                    alt="Bootstrap icone"
+                /></i>
+                <span>Bootstrap 4</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img
+                    src="/IMG/Tecnologias/icons8-wordpress.svg"
+                    alt="Wordpress icone"
+                /></i>
+                <span>Wordpress</span>
+              </div>
+              <div class="quadrado">
+                <i> <img src="/IMG/Tecnologias/icons8-npm.svg" alt="Npm icone" /></i>
+                <span>Npm</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img src="/IMG/Tecnologias/icons8-reagir.svg" alt="React icone"
+                /></i>
+                <span>React</span>
+              </div>
+              <div class="quadrado">
+                <i>
+                  <img
+                    src="/IMG/Tecnologias/icons8-javascript.svg"
+                    alt="JavaScript icone"
+                /></i>
+                <span>JavaScript</span>
+              </div>
+            </div>
+          </div>
+          </div>
+          
     </main>
   </body>
 </html>
