Arrumando icones no gitpages

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           <div class="body-container">
             <div class="container">
               <div class="quadrado">
-                <i> <img src="/IMG/Tecnologias/icons8-figma(1).svg" alt="Figma" /></i>
+                <i> <img src="./IMG/Tecnologias/icons8-figma(1).svg" alt="Figma" /></i>
                 <span>Figma</span>
               </div>
               <div class="quadrado">
                 <i>
                   <img
-                    src="/IMG/Tecnologias/icons8-visual-studio-code-2019.svg"
+                    src="./IMG/Tecnologias/icons8-visual-studio-code-2019.svg"
                     alt="VS Code icone"
                 /></i>
                 <span>Wordpress</span>
@@ -89,7 +89,7 @@
               <div class="quadrado">
                 <i>
                   <img
-                    src="/IMG/Tecnologias/icons8-typescript.svg"
+                    src="./IMG/Tecnologias/icons8-typescript.svg"
                     alt="TypeScript icone"
                 /></i>
                 <span>TypeScript</span>
@@ -97,7 +97,7 @@
               <div class="quadrado">
                 <i>
                   <img
-                    src="/IMG/Tecnologias/icons8-bootstrap.svg"
+                    src="./IMG/Tecnologias/icons8-bootstrap.svg"
                     alt="Bootstrap icone"
                 /></i>
                 <span>Bootstrap 4</span>
@@ -105,25 +105,25 @@
               <div class="quadrado">
                 <i>
                   <img
-                    src="/IMG/Tecnologias/icons8-wordpress.svg"
+                    src="./IMG/Tecnologias/icons8-wordpress.svg"
                     alt="Wordpress icone"
                 /></i>
                 <span>Wordpress</span>
               </div>
               <div class="quadrado">
-                <i> <img src="/IMG/Tecnologias/icons8-npm.svg" alt="Npm icone" /></i>
+                <i> <img src="./IMG/Tecnologias/icons8-npm.svg" alt="Npm icone" /></i>
                 <span>Npm</span>
               </div>
               <div class="quadrado">
                 <i>
-                  <img src="/IMG/Tecnologias/icons8-reagir.svg" alt="React icone"
+                  <img src="./IMG/Tecnologias/icons8-reagir.svg" alt="React icone"
                 /></i>
                 <span>React</span>
               </div>
               <div class="quadrado">
                 <i>
                   <img
-                    src="/IMG/Tecnologias/icons8-javascript.svg"
+                    src="./IMG/Tecnologias/icons8-javascript.svg"
                     alt="JavaScript icone"
                 /></i>
                 <span>JavaScript</span>
