Mensagem de commit

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           em desenvolvimento de sites responsivos e com uma estética que
           represente você e a sua marca.
         </p>
-        <img src="/IMG/VETOR.svg" alt="Desenho vetorial" />
+        <img src="././IMG/VETOR.svg" alt="Desenho vetorial" />
 
         <div class="habilidades">
           <h2 class="Designer">Designer</h2>
