Mensagem de commit1

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               /></a>
             </li>
             <li>
-              <img class="menu" src="/IMG/Redes sociais/Menu.svg" alt="Menu" />
+              <img class="menu" src="./IMG/Redes sociais/Menu.svg" alt="Menu" />
             </li>
           </ul>
         </nav>
@@ -62,7 +62,7 @@
           em desenvolvimento de sites responsivos e com uma estética que
           represente você e a sua marca.
         </p>
-        <img src="././IMG/VETOR.svg" alt="Desenho vetorial" />
+        <img src="./IMG/VETOR.svg" alt="Desenho vetorial" />
 
         <div class="habilidades">
           <h2 class="Designer">Designer</h2>
@@ -75,7 +75,7 @@
           <div class="body-container">
             <div class="container">
               <div class="quadrado">
-                <i> <img src="./IMG/Tecnologias/icons8-figma(1).svg" alt="Figma" /></i>
+               <img src="./IMG/Tecnologias/icons8-figma(1).svg" alt="Figma" />
                 <span>Figma</span>
               </div>
               <div class="quadrado">
